--- a/css/ca.css
+++ b/css/ca.css
@@ -16,9 +16,16 @@
 }
 
 .rule{
-	width: 220px;
+	width: 325px;
+	height: 100px;
 	font-family:courier;
 	font-size: 9px;
+}
+.json{
+	width: 100%;
+	height: 200px;
+	font-family:courier;
+	font-size: 7px;
 }
 .rule_wide{
 	width: 800px;
